[package]
name = "wasm-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
k256 = { version = "0.11", default-features = false, features = ["keccak256", "ecdsa", "std"] }
sha2 = { version = "0.10.2", default-features = false }

[dev-dependencies]
wasm-signer = { path = "./host-wrappers/rust" }

[[test]]
name = "integration"

[workspace]
members = [
  "host-wrappers/rust"
]
