[package]
name = "wasm-crypto"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
serde = "1"
anyhow = "1"
# bytes = "1.2.1"
k256 = { version = "0.11", default-features = false, features = ["keccak256", "ecdsa", "std"] }
sha2 = { version = "0.10.2", default-features = false }
coins-bip32 = { git = "https://github.com/summa-tx/bitcoins-rs", rev = "refs/pull/105/head" }
coins-core = { git = "https://github.com/summa-tx/bitcoins-rs", rev = "refs/pull/105/head" }

bs58 = "0.4.0"

[dev-dependencies]
wasm-crypto-rs = { path = "./host-wrappers/rust" }

[[test]]
name = "integration"

[workspace]
members = [
  "host-wrappers/rust"
]
